--- a/public/css/index.css
+++ b/public/css/index.css
@@ -39,14 +39,18 @@ header {
     background-color: #203040;
     color: #ffffff;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 0.5rem;
+    padding: 0.5rem 2rem;
 }
 header a {
     color: #ffffff;
     text-decoration: none;
+    margin:0 0 0 2rem;
 }
+header a.logo {
+    margin: 0 auto 0 0;
+}
+
 main {
     grid-area: main;
 }
@@ -265,3 +269,43 @@ td {
 th {
     text-align: left;
 }
+
+
+.form-center {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+}
+
+.auth-form {
+    margin: auto;
+    padding: 2rem;
+    background-color: #fafbfc;
+    box-shadow: rgba(0, 0, 0, 0.13) 0 0 5px;
+    border-radius: 1rem;
+}
+
+.auth-form .form-title {
+    margin-bottom: 2rem;
+    font-size: 2rem;
+}
+
+.auth-form .field {
+    margin-bottom: 2rem;
+}
+
+.auth-form label {
+    display: block;
+}
+
+.auth-form .button {
+    width: 100%;
+}
+
+.auth-form .form-bottom {
+    margin-top:2rem;
+    text-align: center;
+}
+
+
